JP-1437 Too long status messages on Bulk action > Step 5 page fix

--- a/coko/com.elster.jupiter.issue.extjs/src/main/web/js/issue/resources/css/isu.css
+++ b/coko/com.elster.jupiter.issue.extjs/src/main/web/js/issue/resources/css/isu.css
@@ -352,6 +352,9 @@ span[class^=isu-assignee-] {
 .isu-bulk-navigation {
     margin: 0px 10px;
 }
+.isu-bulk-message-panel {
+    width: 50%;
+}
 
 .isu-bulk-navigation .active-bulk-list-action {
     background-color: #FFFFFF;
